# PyLFT_MOD

./: .copier-answers.yml  .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  interface.py
notebooks/: visualize.ipynb
src/pylft_mod/: Fe_CmN_oct.mol2  Fe_CmN_oct.xyz  __init__.py  architector.py  architector_builder.py  distortions.py  symmetry.py
src/pylft_mod/molsym_local/pgdetect/: flowchart.py  flowchart_helper.py
src/pylft_mod/molsym_local/symtext/: symtext.py  symtext_helper.py
src/pylft_mod/pyscf/: __init__.py  calcs.py  modata.py  pyscf_tools.py
src/pylft_mod/pyscff/: __init__.py  calcs.py  modata.py  pyscf_tools.py
tests/: cr(co)5nh3.xyz  crco6.xyz  crco6_mixed.xyz  octahedral_complex.xyz  test_distortion.py  test_distortion_errors.py  test_example_module.py  test_symmetry_crco6.py  test_symmetry_xyz.py  visualize.ipynb
tests/xyz files/: Cr_Im_Fm_fac_oct.xyz  Fe_CmN_CmOp_mer_oct.xyz  Fe_OH2_oct.xyz
