[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyLFT_MOD"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Generate M.O. energy diagrams using MolSym and PySCF packages"
dependencies = [
    # "rdkit",
]
authors = [
    {name = "Lupascu Simon-Dimitrie", email = "simon-dimitrie.lupascu@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/None/PyLFT_MOD"
tracker = "https://github.com/None/PyLFT_MOD/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/pylft_mod/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
